<resources>
    <string name="app_name">Assessment_6</string>
    <string name="toolbarTitle">Best Quotes &amp; Status</string>
    <string name="categoryName">Category Name</string>
    <string name="hiiiiiiiiiiiiiiiii">HIIIIIIIIIIIIIIIII</string>
    <string name="like">Like</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="best_quotes_status">Best Quotes &amp; Status</string>
</resources>